--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'DA'
 - !lcsh 'East Anglia (England)'
+- GITenberg
 title: 'East Anglia: Personal Recollections and Historical Associations'
 url: http://www.gutenberg.org/ebooks/30717
